@@ -102,6 +102,7 @@ Version 1.0.xxxx (September xxth 2014)
 - Fixed: Updater when eventsystem was disabled, and added laguage support
 - Implemented: Latest RFXCOM SDK (6.25)
 - Implemented: Option in Login form to remember username/password (1 year)
+- Changed: Transfer device rebuild to Replace Device (See manual)
 
 Version 1.0.1680 (April 21th 2014)
 - Implemented: Support for Forecast.io
